lint and status-go update
https://github.com/status-im/status-go/compare/4a43b2b2...c39d9dc2

--- a/translations/en.json
+++ b/translations/en.json
@@ -357,6 +357,7 @@
   "check-before-syncing-doc-checkbox-2": "Make sure you are logged in on the other device",
   "check-before-syncing-doc-checkbox-3": "Disable the firewall and VPN on your devices",
   "check-before-syncing-doc-description": "To sync your devices successfully, make sure to check and complete these steps:",
+  "check-new-device": "A new device has been detected. You can see device ID below and on your other device. Only confirm the request if device ID matches.",
   "check-on-block-explorer": "Check on block explorer",
   "check-on-opensea": "Check on opensea",
   "check-your-account-balance-and-activity": "Check your account balance and activity",
@@ -1626,6 +1627,7 @@
   "new-community-title": "New community",
   "new-contact": "New contact",
   "new-contract": "New Contract",
+  "new-device-detected": "A new device has been detected. You can see device ID below and on your other device. Only confirm the request if device ID matches.",
   "new-favourite": "New favourite",
   "new-group": "New group",
   "new-group-chat": "New group chat",
@@ -1790,12 +1792,14 @@
   "page-camera-request-blocked": "camera requests blocked. To enable camera requests go to Settings",
   "page-would-like-to-use-camera": "would like to use your camera",
   "pair": "Pair",
+  "pair-and-sync": "Pair and Sync",
   "pair-card": "Pair to this device",
   "pair-code": "Pair code",
   "pair-code-explanation": "Pairs card to a different device (up to 5) to unlock keys and sign transactions with the same Keycard",
   "pair-code-placeholder": "Pair code...",
   "pair-device-toast": "Device successfully paired",
   "pair-devices": "Pair devices",
+  "pair-new-device-and-sync": "Pair new device and sync profile",
   "pair-this-card": "Pair this card",
   "pair-this-device": "Advertise device",
   "pair-this-device-description": "Pair your devices to sync contacts and chats between them",
@@ -2775,8 +2779,5 @@
   "your-recovery-phrase": "Your seed phrase",
   "your-recovery-phrase-description": "This is your seed phrase. You use it to prove that this is your wallet. You only get to see it once! Write it on paper and keep it in a secure place. You will need it if you lose or reinstall your wallet.",
   "your-tip-limit": "Your tip limit",
-  "youre-on-mobile-network": "You’re on mobile network",
-  "pair-and-sync": "Pair and Sync",
-  "new-device-detected": "A new device has been detected. You can see device ID below and on your other device. Only confirm the request if device ID matches.",
-  "pair-new-device-and-sync": "Pair new device and sync profile"
+  "youre-on-mobile-network": "You’re on mobile network"
 }
