chore: add "Privacy Statement" english translation

--- a/translations/en.json
+++ b/translations/en.json
@@ -1175,6 +1175,7 @@
   "intro-message1": "Welcome to Status!\nTap this message to set your password and get started.",
   "intro-privacy-policy-note1": "Status does not collect or profit from your personal data. By continuing, you agree with the ",
   "intro-privacy-policy-note2": "privacy policy",
+  "intro-privacy-statement": "Privacy Statement",
   "intro-text": "Status is your gateway to the decentralized web",
   "intro-text1": "Chat over a peer-to-peer, encrypted network where messages can’t be censored or hacked",
   "intro-text2": "Send and receive digital assets anywhere in the world—no bank account required",
