chore: add english translation for "Beta"

--- a/translations/en.json
+++ b/translations/en.json
@@ -186,6 +186,7 @@
   "balance": "Balance",
   "begin-set-up": "Begin setup",
   "below-base-fee": "max fee below base fee",
+  "beta": "Beta",
   "bio": "Bio",
   "bio-added": "Bio added",
   "bio-is-too-long": "Bio is too long",
