--- a/translations/en.json
+++ b/translations/en.json
@@ -1038,6 +1038,7 @@
   "free": "↓ Free",
   "fri": "Fri",
   "from": "from",
+  "from-all-profiles-on-device": "From all profiles on device",
   "from-capitalized": "From",
   "from-label": "From",
   "gas-amount-limit": "Gas amount limit",
@@ -1569,6 +1570,8 @@
   "mobile-syncing-sheet-title": "Sync using mobile data?",
   "mon": "Mon",
   "more": "more",
+  "more-details-in-privacy-policy-1": "For more details refer to our ",
+  "more-details-in-privacy-policy-2": "Privacy Policy",
   "move-and-reset": "Move and Reset",
   "move-keystore-file": "Move keystore file",
   "move-keystore-file-to-keycard": "Move keystore file to keycard?",
@@ -2565,6 +2568,7 @@
   "updates-to-tos": "Updates to Terms of Use",
   "updates-to-tos-desc": "Before you continue, please review the Terms of Use and confirm you take full responsibility for how you use the app.",
   "url": "URL",
+  "usage-data-shared-from-all-profiles": "Usage data will be shared from all profiles added to device. ",
   "usd-currency": "USD",
   "use-as-profile-picture": "Use as profile picture",
   "use-biometrics": "Use biometrics to fill in your password",
